# tree-diff

./: .gitignore  .travis.yml  ChangeLog.md  README.md  appveyor.yml  cabal-new-install.py  cabal.haskell-ci  cabal.project  stack.yaml  tree-diff.cabal
.github/workflows/: haskell-ci.yml
bench/: tree-diff-bench.hs
fixtures/: HashSet.expr  MyInt1.expr  MyInt2.expr  MyInt3.expr  Positional.expr  exfoo.expr
src-diff/: RefDiffBy.hs
src/Data/: TreeDiff.hs
src/Data/TreeDiff/: Class.hs  Expr.hs  Golden.hs  List.hs  OMap.hs  Parser.hs  Pretty.hs  QuickCheck.hs  Tree.hs
tests/: Tests.hs
