name:                tree-diff
version:             0
synopsis:            Diffing of (expression) trees.
description:
  Common diff algorithm works on list structures:
  .
  @
  diff :: Eq a => [a] -> [a] -> [Edit a]
  @
  .
  This package works on trees.
  .
  @
  treeDiff :: Eq a => Tree a -> Tree a -> Edit (EditTree a)
  @
  .
  This package also provides a way to diff arbitrary ADTs,
  using @Generics@-derivable helpers.
  .
  This package differs from <http://hackage.haskell.org/package/gdiff gdiff>,
  in a two ways: @tree-diff@ doesn't have patch function,
  and the "edit-script" is a tree itself, which is useful for pretty-printing.
  .
  @
  >>> pretty $ ediff (Foo 42 [True, False] "old") (Foo 42 [False, False, True] "new")
  Foo
    {fooBool = [-True, +False, False, +True],
     fooInt = 42,
     fooString = -"old" +"new"}
  @
homepage:            https://github.com/phadej/tree-diff
bug-reports:         https://github.com/phadej/tree-diff/issues
license:             BSD3
license-file:        LICENSE
author:              Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:          Oleg.Grenrus <oleg.grenrus@iki.fi>
copyright:           (c) 2017 Oleg Grenrus
category:            Data
build-type:          Custom
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10
tested-with:
  GHC==7.8.4,
  GHC==7.10.3,
  GHC==8.0.2,
  GHC==8.2.1

custom-setup
  setup-depends:
    base, Cabal, cabal-doctest >=1.0.2 && <1.1

source-repository head
  type:      git
  location:  https://github.com/phadej/tree-diff.git

library
  exposed-modules:
    Data.TreeDiff
    Data.TreeDiff.List
    Data.TreeDiff.Tree
    Data.TreeDiff.Expr
    Data.TreeDiff.Class
  build-depends:
    base         >=4.7     && <4.11,
    base-compat  >=0.9.3   && <0.10,
    containers   >=0.5.5.1 && <0.6,
    generics-sop >=0.3.1.0 && <0.4,
    MemoTrie     >=0.6.8   && <0.7,
    vector       >=0.12    && <0.13
  other-extensions:
    ConstraintKinds
    CPP
    DefaultSignatures
    FlexibleContexts
    GADTs
    RankNTypes
    ScopedTypeVariables
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite doctests
  type:                exitcode-stdio-1.0
  main-is:             doctests.hs
  x-doctest-options:   -D__DOCTEST__
  build-depends:
    base,
    doctest    >= 0.11.3 && <0.12,
    QuickCheck == 2.10.*,
    template-haskell,
    pretty     >=1.1 && <1.2
  ghc-options:         -Wall -threaded
  hs-source-dirs:      tests
  default-language:    Haskell2010
